# pet-insurance-recommender

./: .editorconfig  .env.example  .gitignore  .prettierrc  README.md  docker-compose.qdrant.yml  pyproject.toml  streamlit_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feat.md  fix.md  refactor.md
app/: main.py
app/agents/: utils.py
app/agents/composer_agent/: graph.py
app/agents/composer_agent/mocks/: judge_mock.py  vet_agent_mock.py
app/agents/composer_agent/nodes/: writer.py
app/agents/document_parser/: constants.py  dp_graph.py
app/agents/document_parser/nodes/: document_parse.py  document_parser.py  embeddings.py  splitter.py  tagging.py  vector_store.py
app/agents/document_parser/state/: document_parser_state.py  insure_company.py
app/agents/judge_agent/: graph.py  state.py
app/agents/orchestrator/: graph.py  orchestrator_graph.py  test_orchestrator.py  user_input_graph.py
app/agents/rag_agent/: dp_graph.py  rag_graph.py  retrieve_graph.py
app/agents/rag_agent_gs/: candidates.py  cos_top.py  graph.py  input_query.py  mock.py  query_emb.py  sparse.py  tc_chunk.py  tc_emb.py
app/agents/sample_agent_1/: graph.py
app/agents/sample_agent_2/: graph.py
app/agents/user_input_template_agent/: graph.py
app/agents/vet_agent/: graph.py
qdrant/: meta.json
qdrant/collection/meritz_sparse/: storage.sqlite
script/: run_orchestrator_graph.sh  run_orchestrator_graph_args.sh  run_streamlit.sh  run_test_guardrail.sh  run_test_orchestrator_guardrail.sh  run_test_router.sh  run_test_single.sh  run_user_input_graph.sh
(+182 files in other folders)
