[project]
name = "pet-insurance-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "langchain>=1.2.9",
    "langgraph>=1.0.8",
    "langsmith>=0.6.9",
    "pydantic>=2.12.5",
    "rich>=14.3.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
